--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "build": "cd ./frontend && npm start && cd backend && npm start",
+    "heroku-postbuild": "cd ./frontend && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
