--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts": {
       "start": "npm run build && node server.js",
       "build": "cd frontend && npm start && cd backend && npm start",
-      
+      "heroku-postbuild": "cd frontend && npm install && npm run build"
     },
     "dependencies": {
       "express": "^4.17.1",
