--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
     "version": "1.0.0",
     "description": "metaschool web app",
     "scripts": {
-      "start": "npm run build && node server.js",
-      "build": "cd backend && npm start",
-      "heroku-postbuild": "cd frontend && npm install && npm run build"
+      "start": "cd backend && npm start",
+      "build": "cd frontend && npm run build && cd ../backend && npm run build",
+      "heroku-postbuild": "cd frontend && npm install && npm run build && cd ../backend && npm install && npm run build"
     },
     "dependencies": {
       "express": "^4.17.1",
