--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
     "description": "metaschool web app",
     "scripts": {
       "start": "cd backend && npm start",
-      "build": "cd frontend && npm run build",
-      "heroku-postbuild": "cd frontend && npm install && npm start"
+      "build": "cd frontend && npm run build"
     },
     "dependencies": {
       "express": "^4.17.1",
