--- a/backend/.env
+++ b/backend/.env
@@ -2,5 +2,10 @@ JWTPRIVATEKEY = "etumates"
 SALT = 10
 BACKEND_PORT = "http://localhost:3001"
 PORT = 3001
-COOKIE_NAME = "SessionID"
-NODE_ENV = "production"
+APIKEY ="AIzaSyBZtlRxIvjFsO8xIWpsBwCTzM6WzPuWeJw",
+AUTHDOMAIN= "meta-school-ae3cc.firebaseapp.com",
+DATABASEURL= "https://meta-school-ae3cc-default-rtdb.europe-west1.firebasedatabase.app",
+PROJECTID= "meta-school-ae3cc",
+STORAGEBUCKET= "meta-school-ae3cc.appspot.com",
+SENDERID= "84657342772",
+APPID= "1:84657342772:web:4f3d3ae3875f2fb58abd61"
