--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
       "server": "nodemon backend/index.js",
       "client": "npm start --prefix frontend",
       "dev": "concurrently \"npm run index\" \"npm run client\"",
-      "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
+      "heroku-postbuild": "npm install --prefix frontend && npm run build --prefix frontend"
    },
     "dependencies": {
       "express": "^4.17.1",
