--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-    "name": "metaschool",
-    "version": "1.0.0",
-    "description": "metaschool web app",
-    "scripts": {
-      "start": "node backend/index.js",
-      "server": "nodemon backend/index.js",
-      "client": "npm start --prefix frontend",
-      "dev": "concurrently \"npm run index\" \"npm run client\"",
-      "heroku-postbuild": "npm install --prefix frontend && npm run build --prefix frontend"
-   },
-    "dependencies": {
-      "express": "^4.17.1",
-      "react": "^17.0.2"
-    },
-    "main": "index.js",
-    "author": "ASP",
-    "license": "ISC"
-  }
-  
+  "name": "metaschool",
+  "version": "1.0.0",
+  "description": "metaschool web app",
+  "scripts": {
+    "start": "npm run build && node index.js",
+    "server": "nodemon backend/index.js",
+    "client": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run index\" \"npm run client\"",
+    "build": "cd frontend && npm install && npm run build && cd ../backend && npm install",
+    "heroku-postbuild": "npm run build"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "react": "^17.0.2"
+  },
+  "main": "index.js",
+  "author": "ASP",
+  "license": "ISC"
+}
