--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "scripts": {
     "start": "npm run build && node index.js",
     "server": "nodemon backend/index.js",
-    "client": "npm start --prefix frontend",
-    "dev": "concurrently \"npm run index\" \"npm run client\"",
-    "heroku-postbuild": "npm run build"
+    "client": "npm start --prefix frontend"
   },
 
   "dependencies": {
