--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "Metaschool Web",
   "main": "backend/server.js",
-  "type": "module",
   "engines": {
     "node": "16.17.0"
   },
@@ -25,8 +24,6 @@
     "express": "^4.18.2",
     "firebase": "^8.6.8",
     "http": "^0.0.1-security",
-    "jsonwebtoken": "^9.0.0",
-    "mongodb": "^5.2.0",
-    "mongoose": "^7.0.3"
+    "jsonwebtoken": "^9.0.0"
   }
 }
