--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.2",
     "firebase": "^8.6.8",
     "http": "^0.0.1-security",
-    "jsonwebtoken": "^9.0.0"
+    "jsonwebtoken": "^9.0.0",
+    "path": "^0.12.7"
   }
 }
