--- a/backend/package.json
+++ b/backend/package.json
@@ -2,13 +2,13 @@
   "name": "metaschool_web",
   "version": "1.0.0",
   "description": "Metaschool Web",
-  "main": "backend/server.js",
+  "main": "server.js",
   "engines": {
     "node": "16.17.0"
   },
   "scripts": {
-    "start": "node backend/server.js",
-    "server": "nodemon backend/server.js",
+    "start": "node server.js",
+    "server": "nodemon server.js",
     "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "cd frontend && npm install && npm run build"
