--- a/backend/frontend/package.json
+++ b/backend/frontend/package.json
@@ -29,6 +29,9 @@
     "compile-scss": "sass src/assets/scss/black-dashboard-react.scss src/assets/css/black-dashboard-react.css",
     "minify-scss": "sass src/assets/scss/black-dashboard-react.scss src/assets/css/black-dashboard-react.min.css --style compressed"
   },
+  "resolutions": {
+    "react-chartjs-2": "3.0.4"
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
