--- a/backend/package.json
+++ b/backend/package.json
@@ -10,9 +10,9 @@
     "classnames": "2.3.1",
     "perfect-scrollbar": "1.5.5",
     "prop-types": "15.8.1",
-    "react": ">=16.8.0",
+    "react": "16.8.0",
     "react-chartjs-2": "3.0.4",
-    "react-dom": ">=16.8.0",
+    "react-dom": "16.8.0",
     "react-facebook-login": "^4.1.1",
     "react-notification-alert": "0.0.13",
     "react-router-dom": "5.2.0",
@@ -45,8 +45,8 @@
     "extends": "react-app"
   },
   "peerDependencies": {
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
+    "react": "16.8.0",
+    "react-dom": "16.8.0"
   },
   "browserslist": [
     ">0.2%",
