--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,5 +50,9 @@
   "devDependencies": {
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.9"
+  },
+  "engines": {
+    "node": "16.17.0",
+    "npm": "8.5.5"
   }
 }
