--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,6 @@
   "name": "metaschool",
   "version": "1.0.0",
   "private": true,
-  "homepage": "/login",
   "dependencies": {
     "@fortawesome/fontawesome-free": "6.1.1",
     "bootstrap": "4.5.3",
@@ -22,7 +21,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && gulp licenses",
+    "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
@@ -46,10 +45,6 @@
     "eslint-plugin-flowtype": "8.0.3",
     "jquery": "3.6.0",
     "typescript": "4.7.4"
-  },
-  "devDependencies": {
-    "gulp": "4.0.2",
-    "gulp-append-prepend": "1.0.9"
   },
   "engines": {
     "node": "16.17.0",
