--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,12 @@
 # dependencies
 node_modules/
 /frontend/node_modules/
+/backend/node_modules/
 /node_modules
 /.pnp
 .pnp.js
 
+.gitignore
 # testing
 /coverage
 
@@ -17,6 +19,12 @@ node_modules/
 .env.development.local
 .env.test.local
 .env.production.local
+
+/backend/env
+/backend/env.local
+/backend/env.development.local
+/backend/env.test.local
+/backend/env.production.local
 
 npm-debug.log*
 yarn-debug.log*
